--- a/style.css
+++ b/style.css
@@ -1,33 +1,47 @@
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
-font-family: 'Source Code Pro', monospace;
+    font-family: 'Source Code Pro', monospace;
     
 }
 .flexible-container{
     display: flex;
+    margin-left: 100px;
+    margin-top: 50px;
 }
 .header{
     width: 50%;
-    margin-left: 50px;
+   
 }
 .header img{
     width: 70%;
+    margin-left: 100px;
   
 }
 h1{
     font-size: 60px;
     font-weight: 900;
 }
-.header{
-    margin-left: 150px;
+h2{
+    font-size: 50px;
+    font-weight: 900;
+    text-align: center;
 }
+h3{
+    font-size: 40px;
+    font-weight: 900px;
+}
+h4{
+    font-size: 30px;
+    font-weight: 900;
+}
+
 .header-box{
     border-left: 5px solid;
-    border-radius: 4px;
+
     padding-left: 10px;
     margin-top: 150px;
-    border-image: linear-gradient(violet,blue) 1;
+    border-image: linear-gradient(rgb(238, 130, 130),rgb(255, 0, 140)) 1 ;
     
    
     
@@ -49,4 +63,62 @@ h1{
 }
 .text-shadow{
     text-shadow: lightblue 2px 2px;
+}
+.card{
+    display: flex;
+    margin-left: 100px;
+
+}
+.card-item{
+    width: 25%;
+    margin:10px;
+    border: 1px solid transparent;
+
+    border-radius: 20px;
+    padding: 40px 30px;
+}
+#card1{
+    background-color: #ffe0fb;
+    
+}
+#card2{
+    background-color: #e0fbff;
+    
+    margin-left: 1%;
+    margin-right: 1%;
+}
+#card3{
+    background-color:  #ffe0e0;
+
+}
+.card-item img{
+    width: 40%;
+    
+    
+}
+.image-box{
+    width: 35%;
+
+    border: 1px solid transparent;
+    border-radius: 5px;
+    margin-right: 100px;
+    
+}
+.image-box img{
+    width: 100%;
+   
+}
+.blog{
+    width: 50%;
+    margin-right: 100px;
+
+}
+footer{
+    background-color: black;
+    height: 150px;
+    margin-top: 100px;
+    color: white;
+    text-align: center;
+    padding: 10px 0px;
+
 }
